bluefish-unstable (1.3.4-0dl1) UNRELEASED; urgency=low

  * New upstream release 1.3.4.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Fri, 17 Apr 2009 15:00:05 +0200

bluefish-unstable (1.3.3+svn4608-0dl1) unstable; urgency=low

  * New upstream release 1.3.3 including small fixes from SVN rev 4608.
    - dropped --projectfile switch in favour of MIME type based detection
    - dropped --newwindow swtch in favour of --curwindow (new window now
      default)
    - dropped --skiprootcheck switch
    - German, Japanese and Brazilian Portuguese translation updates
    - code cleanup and several memory leak fixes
    - new visible spacing feature
    - new charmap plugin
    - several bug fixes and improvements

  * debian/control (Priority): Downgraded to extra.
    (Build-Depends): Added libgucharmap2-dev | libgucharmap-dev. intltool
    dependency increased.
  * debian/copyright: 
  * debian/rules: Added support for parallel building.
    (LDFLAGS): Don't use `-Wl,-O1' with noopt.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Thu, 05 Mar 2009 17:34:35 +0100

bluefish-unstable (1.3.2+svn4508-0dl1) unstable; urgency=low

  * New upstream release 1.3.2 including some fixes from SVN revision 4508.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Sun, 01 Feb 2009 16:01:27 +0100

bluefish-unstable (1.3.1+svn4478-0dl2) unstable; urgency=low

  * data/bflang/php.bflang2: Removed outdated copy.

 -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Sun, 25 Jan 2009 15:49:52 +0100

bluefish-unstable (1.3.1+svn4478-0dl1) unstable; urgency=low

  * New tarball created from SVN revision 4478.

  * debian/bluefish-unstable-data.preinst: Removed. The file is now installed
    with a different name.
  * debian/bluefish-unstable-data.postrm: Ditto.
  * debian/control (Build-Depends): dh_icons needs versioned debhelper.
    (Depends): Added ${misc:Depends} to all. Added gvfs-backends for the
    application for remote file-system support.