@@ -2,6 +2,17 @@ bluefish-unstable (1.3.4-0dl1) UNRELEASED; urgency=low
 
   * New upstream release 1.3.4.
 
+  * debian/control (Standards-Version): Bumped to 3.8.1.
+    (Build-Depends): Added libxml2-utils for Ubuntu.
+    (Suggests): Added the Ubuntu browser packages.
+    (Section): The debugging symbols belong into the debug section.
+  * debian/rules (LDFLAGS): Don't overwrite LDFLAGS from environment.
+    (config.status): Removed obsolete switch. Added switches for the catalog
+    system (although they are unused atm).
+    (install, binary-arch, binary-indep): Moved dh_install call to the install
+    target.
+    (binary-arch): Dropped dh_installmime in this target.
+
  -- Daniel Leidert (dale) <daniel.leidert@wgdd.de>  Fri, 17 Apr 2009 15:00:05 +0200
 
 bluefish-unstable (1.3.3+svn4608-0dl1) unstable; urgency=low
